Fix Category page design. Thumbnail not align

--- a/wp-content/themes/mvcshowcase/scss/mvc-archive.scss
+++ b/wp-content/themes/mvcshowcase/scss/mvc-archive.scss
@@ -1,11 +1,13 @@
 .archive{
   #main {
+    width:80%;
     padding:0 10%;
     float:left;
     article {
       float:left;
       width: 20%;
       padding:2.5%;
+      text-align:center;
       img {
         max-width: 100%;
         height: auto;
